--- a/PrivateProfileRedirector.vcxproj.filters
+++ b/PrivateProfileRedirector.vcxproj.filters
@@ -8,9 +8,6 @@
     <Filter Include="Code\xSE">
       <UniqueIdentifier>{57b08a04-a4a6-4158-9545-bcc203a02920}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Code\xSE\RefreshINIOverriders">
-      <UniqueIdentifier>{7193ec96-b0b7-465f-b415-fbe9d1b8575c}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Code\Utility">
       <UniqueIdentifier>{57f912be-12f4-44b9-bd34-6ba680dda8ae}</UniqueIdentifier>
     </Filter>
@@ -21,20 +18,23 @@
     <Filter Include="Resources\Utility">
       <UniqueIdentifier>{681ea3ad-ef1e-4577-a6ac-4182e65ed129}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Code\Qx">
+      <UniqueIdentifier>{87830748-708a-4f0e-b83a-48bd89958247}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Code\Qx\EventSystem">
+      <UniqueIdentifier>{7065a296-6ba7-4f06-8496-db933488912b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Code\Qx\EventSystem\Events">
+      <UniqueIdentifier>{f16bf61b-55ed-416d-8ac6-d1a6e4047e0e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Code\xSE\ConsoleCommandOverrider">
+      <UniqueIdentifier>{7193ec96-b0b7-465f-b415-fbe9d1b8575c}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="resource.h">
       <Filter>Resources</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\xSE\RefreshINIOverriders\F4SE.h">
-      <Filter>Code\xSE\RefreshINIOverriders</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\xSE\RefreshINIOverriders\SKSE64.h">
-      <Filter>Code\xSE\RefreshINIOverriders</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\xSE\RefreshINIOverriders\SKSEVR.h">
-      <Filter>Code\xSE\RefreshINIOverriders</Filter>
     </ClInclude>
     <ClInclude Include="Source\Utility\CriticalSection.h">
       <Filter>Code\Utility</Filter>
@@ -105,7 +105,60 @@
     <ClInclude Include="Source\RedirectedFunctions.h">
       <Filter>Code</Filter>
     </ClInclude>
-    <ClInclude Include="Source\IRefreshINIOverrider.h" />
+    <ClInclude Include="Source\Qx\EventSystem\CallWrapper.h">
+      <Filter>Code\Qx\EventSystem</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Qx\EventSystem\Common.h">
+      <Filter>Code\Qx\EventSystem</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Qx\EventSystem\Event.h">
+      <Filter>Code\Qx\EventSystem</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Qx\EventSystem\EventBuilder.h">
+      <Filter>Code\Qx\EventSystem</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Qx\EventSystem\EventFilter.h">
+      <Filter>Code\Qx\EventSystem</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Qx\EventSystem\EventItem.h">
+      <Filter>Code\Qx\EventSystem</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Qx\EventSystem\EvtHandler.h">
+      <Filter>Code\Qx\EventSystem</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Qx\ClientData.h">
+      <Filter>Code\Qx</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Qx\Utility.h">
+      <Filter>Code\Qx</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Qx\EventSystem\Events\QxIdleEvent.h">
+      <Filter>Code\Qx\EventSystem\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Qx\EventSystem\Events\QxNotifyEvent.h">
+      <Filter>Code\Qx\EventSystem\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Qx\EventSystem\Events\QxConsoleEvent.h">
+      <Filter>Code\Qx\EventSystem\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\xSE\IConsoleCommandOverrider.h">
+      <Filter>Code\xSE</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\xSE\ConsoleCommandOverrider\SKSE64.h">
+      <Filter>Code\xSE\ConsoleCommandOverrider</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\xSE\ConsoleCommandOverrider\SKSEVR.h">
+      <Filter>Code\xSE\ConsoleCommandOverrider</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\xSE\ConsoleCommandOverrider\F4SE.h">
+      <Filter>Code\xSE\ConsoleCommandOverrider</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\xSE\ConsoleCommandOverrider\SKSE.h">
+      <Filter>Code\xSE\ConsoleCommandOverrider</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Qx\EventSystem\Events\QxGameEvent.h">
+      <Filter>Code\Qx\EventSystem\Events</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\PrivateProfileRedirector.cpp">
@@ -136,17 +189,32 @@
     <ClCompile Include="Source\INIWrapper.cpp">
       <Filter>Code</Filter>
     </ClCompile>
-    <ClCompile Include="Source\xSE\RefreshINIOverriders\SKSE64.cpp">
-      <Filter>Code\xSE\RefreshINIOverriders</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\xSE\RefreshINIOverriders\SKSEVR.cpp">
-      <Filter>Code\xSE\RefreshINIOverriders</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\xSE\RefreshINIOverriders\F4SE.cpp">
-      <Filter>Code\xSE\RefreshINIOverriders</Filter>
-    </ClCompile>
     <ClCompile Include="Source\xSE\ScriptExtenderInterface.cpp">
       <Filter>Code\xSE</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Qx\EventSystem\Event.cpp">
+      <Filter>Code\Qx\EventSystem</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Qx\EventSystem\EventBuilder.cpp">
+      <Filter>Code\Qx\EventSystem</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Qx\EventSystem\EventItem.cpp">
+      <Filter>Code\Qx\EventSystem</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Qx\EventSystem\EvtHandler.cpp">
+      <Filter>Code\Qx\EventSystem</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\xSE\ConsoleCommandOverrider\SKSE64.cpp">
+      <Filter>Code\xSE\ConsoleCommandOverrider</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\xSE\ConsoleCommandOverrider\SKSEVR.cpp">
+      <Filter>Code\xSE\ConsoleCommandOverrider</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\xSE\ConsoleCommandOverrider\F4SE.cpp">
+      <Filter>Code\xSE\ConsoleCommandOverrider</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\xSE\ConsoleCommandOverrider\SKSE.cpp">
+      <Filter>Code\xSE\ConsoleCommandOverrider</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
